# console-zip

./: .gitignore  README.md
zip/: INSTALL.txt  Makefile  Makefile.am  Makefile.in  configure  configure.ac  wazip.cc  wazip.h
zip/Visual C++/wazip/: wazip.sln
zip/Visual C++/wazip/lib/: libboost_filesystem-vc100-mt-s-1_57.lib  libboost_system-vc100-mt-s-1_57.lib  zlib1.lib
zip/Visual C++/wazip/wazip/: wazip.vcxproj  wazip.vcxproj.filters
zip/zip/: utf8.c  utf8.h
